--- a/Final/readme
+++ b/Final/readme
@@ -1,1 +1,6 @@
 
+Final Project 
+Deniz Aycan-Arif Akkan
+
+Cryptocurrencies and Social Media Usage
+Analysis with Neural Networks and Statistical Models
