--- a/Final/readme
+++ b/Final/readme
@@ -4,3 +4,8 @@ Deniz Aycan-Arif Akkan
 
 Cryptocurrencies and Social Media Usage
 Analysis with Neural Networks and Statistical Models
+
+
+Analysis.py = Machine Learning and Statistical Analysis
+Process.py = Data processing
+Varmax = Varmax model that was not successful
